# open-ragnarok

./: CMakeLists.txt
grf_explorer/: CMakeLists.txt  down_arrow.xpm  grfexplorer.cc  grfexplorer.h  grflist.cc  grflist.h  main.cc  readme.txt  up_arrow.xpm  wx_support.h
grf_explorer/msvc/: GRFExplorer.vcproj  GRFExplorer.vcxproj
logsys/: CMakeLists.txt  Makefile  logsys.cc
logsys/include/: stdafx.h
logsys/include/logsys/: colors.h  logsys.h  logsys_macros.h
logsys/msvc/: logsys.vcproj  logsys.vcxproj
openro/: CMakeLists.txt  Makefile  data.ini.sample  gui_act.cc  gui_act.h  log.h  main.cc  openro.cc  openro.h  states.h  stdafx.cc  stdafx.h
openro/gui/: desktop_char.cc  desktop_char.h  desktop_create.cc  desktop_create.h  desktop_ingame.cc  desktop_ingame.h  desktop_login.cc  desktop_login.h  desktop_service.cc  desktop_service.h  desktops.h  ro_desktop.cc  ro_desktop.h
openro/msvc/: openro.rc  openro.vcproj  openro.vcxproj  resource.h
pktgen/: CMakeLists.txt  main.cc  pktgen.cc  pktgen.h  stdafx.h
pktgen/msvc/: pktgen.vcproj
roconsole/: CMakeLists.txt  basic_objects.cc  basic_objects.h  main.cc  object.cc  object.h  stdafx.cc  stdafx.h
roconsole/msvc/: ROConsole.vcproj
roengine/: CMakeLists.txt  Makefile  base_cache.h  blob.h  cache_manager.cc  camera.cc  camera.h  charobj.cc  file_data.cc  file_data.h  file_manager.cc  file_manager.h  frustum.cc  frustum.h  full_act.cc  full_act.h  gl_object.cc  gl_object.h  gl_object_cache.cc  gl_object_cache.h  image.cc  image.h  image_bmp.cc  image_bmp.h  image_spr.cc  image_spr.h  ro_engine.cc  ro_engine.h  ro_object_cache.cc  ro_object_cache.h  sdl_engine.cc  sdl_engine.h  spr_cache.cc  stdafx.cc  stdafx.h  texture.cc  texture.h  texturecache.cc  texturemanager.cc  texturemanager.h  (+1 more)
roengine/gui/: button.cc  button.h  buttonbar.cc  chatlog.cc  chatwindow.cc  checkbox.cc  desktop.cc  desktop.h  dialog.cc  dropdownlist.cc  element.cc  element.h  event.cc  event.h  font.cc  font.h  glf_font.cc  glf_font.h  gui.cc  gui.h  hpspbar.cc  inventorywindow.cc  label.cc  label.h  list.cc  list.h  progressbar.cc  scrollbar.cc  singleton.h  slider.cc  statuswindow.cc  sysbox.cc  textbox.cc  textinput.cc  textinput.h  window.cc  window.h
roengine/include/: stdafx.h
roengine/include/roengine/: base_cache.h  cache_manager.h  camera.h  file_data.h  file_manager.h  frustum.h  full_act.h  gl_object.h  gl_object_cache.h  ro_engine.h  ro_object_cache.h  sdl_engine.h  spr_cache.h  stdafx.h  texturecache.h  texturemanager.h  vector.h
roengine/msvc9/: roengine.vcproj  roengine.vcxproj
roengine/objects/: act_object.cc  act_object.h  actor.cc  cube_object.cc  cube_object.h  homunobj.cc  mobobj.cc  npcobj.cc  rsm_object.cc  rsm_object.h  rsw_object.cc  rsw_object.h  str_object.cc
rogl/: CMakeLists.txt  Makefile  actgl.cc  actgl.h  blob.cc  globject.h  image.cc  image_bmp.cc  image_spr.cc  impdecl.h  readme.txt  rogl.cc  rogl.cpp  rogl.h  rsmgl.cc  rsmgl.h  rswgl.cc  rswgl.h  sprgl.cc  stdafx.cpp  stdafx.h  texture.cc
rogl/include/: stdafx.h
rogl/include/rogl/: actgl.h  blob.h  full_act.h  globject.h  image.h  image_bmp.h  image_spr.h  rogl.h  rogl_import.h  rogl_static.h  rsmgl.h  rswgl.h  sprgl.h  texture.h
rogl/msvc2008/: AssemblyInfo.cpp  resource.h  rogl.rc  rogl.vcproj  rogl.vcxproj  rogl_static.vcproj
roint/: AssemblyInfo.cpp  CMakeLists.txt  Makefile  act.cc  act.h  common.cc  constants.cc  constants.h  cp949.h  gat.cc  gat.h  gnd.cc  gnd.h  grf.cc  grf.h  impdecl.h  log.cc  object.cc  object.h  pal.cc  readme.txt  ro.cc  ro.h  ro_object.cc  ro_object.h  ro_seq.h  ro_static.h  ro_strings.cc  ro_strings.h  roint.vcproj  roint_import.h  roint_settings.h  rsm.cc  rsm.h  rsw.cc  rsw.h  rsw_objects.cc  spr.cc  spr.h  stdafx.cpp  (+3 more)
roint/debian/: README  changelog  control  copyright  dirs  rules
roint/include/: cp949.h  log.h  stdafx.h
roint/msvc2008/: app.rc  resource.h  roint.sln  roint.vcproj  roint.vcxproj  roint_static.vcproj
roint/psp/: Makefile
roint/python/: pyact.cc  pyact.h  pygrf.cc  pygrf.h  pypal.cc  pyrsm.cc  pyrsm.h  pyrsw.cc  pyrsw.h  pyspr.cc  pyspr.h  pystrings.cc  pystrings.h
roint/tinyxml/: tinyxml.cc  tinyxml.h  tinyxmlerror.cc  tinyxmlparser.cc
ronet/: CMakeLists.txt  Makefile  connection.cc  log.cc  mutex.cc  net_tools.cc  packet.cc  packet_factory.cc  packet_vector.cc  pkt_charcreated.cc  readme.txt  ronet.cc  stdafx.cc  tcp_connection.cc  ucbuffer.cc
ronet/include/: log.h  stdafx.h
ronet/msvc2009/: ronet.rc  ronet.vcproj  ronet.vcxproj  ronet_dll.vcproj
ronet/packets/: generic_packets.cc  pkt_actionrequest.cc  pkt_actoraction.cc  pkt_actordisplay.cc  pkt_actormove.cc  pkt_actorspawn.cc  pkt_actorwalking.cc  pkt_attackrange.cc  pkt_authfailed.cc  pkt_charcreate.cc  pkt_charcreated.cc  pkt_charcreateerror.cc  pkt_charleavescreen.cc  pkt_charlist.cc  pkt_charlogin.cc  pkt_charposition.cc  pkt_charselect.cc  pkt_displaystat.cc  pkt_gmbroad.cc  pkt_guildinforequest.cc  pkt_guildmessage.cc  pkt_hotkeylist.cc  pkt_hpupdateparty.cc  pkt_inventoryitems.cc  pkt_inventoryitemsstackable.cc  pkt_itemgained.cc  pkt_keepalive.cc  pkt_keepalivemap.cc  pkt_login.cc  pkt_login2.cc  pkt_loginerror.cc  pkt_mapacctsend.cc  pkt_mapchange.cc  pkt_maploaded.cc  pkt_maplogin.cc  pkt_maploginsuccess.cc  pkt_mapmove.cc  pkt_mapmoveok.cc  pkt_npccancel.cc  pkt_npccontinue.cc  (+19 more)
rsm_view/: CMakeLists.txt  blob.h  image.cc  image.h  image_bmp.cc  image_bmp.h  main.cc  sdlengine.cc  sdlengine.h  stdafx.h
rsm_view/msvc2008/: rsm_view.vcproj
rsw_view/: CMakeLists.txt  blob.h  image.h  image_bmp.cc  main.cc  my_rsw.h  sdlengine.cc  sdlengine.h  stdafx.cc  stdafx.h
sdl_engine/: CMakeLists.txt  Makefile  blob.cc  console.cc  engine.cc  font.cc  frame.cc  ft_font.cc  glf_font.cc  gui.cc  image.cc  image_bmp.cc  sdl_engine.cc  sdle_string.cc  texture.cc  texture_bmp.cc  texture_jpeg.cc  texture_png.cc  texture_tga.cc  vertex.cc
sdl_engine/include/: stdafx.h
sdl_engine/msvc/: sdl_engine.vcproj  sdl_engine.vcxproj
tools/: CMakeLists.txt  Makefile  README  act_dump.cc  rsm_dump.cc  rsw_dump.cc  spr_export.cc
(+210 files in other folders)
